--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Image Search</string>
     <string name="search">Search</string>
     <string name="my_box">My Box</string>
+    <string name="search_item_text">[Image] 네이버 블로그</string>
+    <string name="search_item_date">yyyy-MM-dd HH:mm:ss</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
